# IDS721-Proj3

./: Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  database.sqlite  docker-compose.yml
.devcontainer/: devcontainer.json
database/: database.sqlite
migrations/2023-03-07-212749_create_product/: up.sql
src/: basic_auth.rs  main.rs  models.rs  repositories.rs  schema.rs
